@@ -1,5 +1,12 @@
 2013-07-30  Tassilo Horn  <tsdh@gnu.org>
 
+	* gnus-sum.el (gnus-summary-make-menu-bar): Add "Current thread score"
+	menu entry.
+
+	* gnus-score.el (gnus-summary-current-score): Use prefix arg to show
+	the current thread's total score instead of the current article's
+	score.
+
 	* gnus-sum.el (gnus-subthread-sort-functions): New defcustom.
 	(gnus-sort-threads-recursively): Delete defcustom.
 	(gnus-sort-threads-recursive): Adapt accordingly.
